syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "scalapb/scalapb.proto";

package com.abhi.grpc;

message ToBeGreeted {
    string person = 1;
}

message Greeting {
    string message = 1;
}

service HelloWorld {
    rpc sayHello(ToBeGreeted) returns (Greeting);
}